@@ -1,11 +1,12 @@
 3.24.0
 ======
-Aug 4, 2022
+Aug 5, 2022
 - Add configurable name `prefix` to `@Examples` annotation
 - Make `where` filter in `@Examples` annotation a JavaScript expression
-- Internal enhancement for better handling of unresolved references
+- Internal enhancement for better handling of unresolved references during interpolation
   - Use `String => Option[String]` instead of `String => String` interpolator signature (internal enhancement)
 - Retry boolean JavaScript conditions on error until timeout
+- Expand scenario outline StepDefs at call site
 
 3.23.0
 ======
